fixing navbar mobile on safari 3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,14 +337,13 @@ h6 {
 
 .navbar-mobile {
   position: fixed;
-  overflow: hidden;
+  overflow: visible;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.9);
   transition: 0.3s;
-  -webkit-transform: translate3d(0, 0, 0);
   z-index: 999;
   margin-top: 0;
 }
